# duckstation

./: Dockerfile  build.sh  patch_verneed.py
.github/workflows/: Build-spruce-station.yml  build-all.yml  build-universal.yml
CMakeModules/: DuckStationBuildOptions.cmake  DuckStationBuildSummary.cmake  DuckStationDependencies.cmake
dep/sdl3-compat/SDL3/: SDL.h
src/: CMakeLists.txt
src/duckstation-sdl/: CMakeLists.txt  glibc_compat.c  sdl_host.cpp
src/util/: CMakeLists.txt  drm_display.cpp  drm_display.h  opengl_context.cpp  opengl_context_egl_gbm.cpp  opengl_context_egl_gbm.h  sdl_input_source.cpp  window_info.h
